@@ -7,8 +7,11 @@ chromium-browser (13.0.782.99~r93151-1) UNRELEASED; urgency=low
   * Switch to git
   * Use system icu, vpx, flac, webp, speex libs
   * Build-depens on gyp >= 0.1~svn971
+  * Run the gclient hooks when creating the source tarball, as we need files
+    from the Native Client's integrated runtime (IRT) library
+    (Thanks to Fabien Tassin)
 
- -- Giuseppe Iuculano <iuculano@debian.org>  Sat, 23 Jul 2011 19:55:04 +0200
+ -- Giuseppe Iuculano <iuculano@debian.org>  Sat, 23 Jul 2011 20:46:56 +0200
 
 chromium-browser (12.0.742.112~r90304-1) unstable; urgency=high
 
